--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Lim Jae Hoon
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer
 
 #
 # Flags below are optional
@@ -29,7 +29,7 @@ navigation:
   - name: Tags
     url: /tags
   - name: Theme
-    url: https://github.com/AWEEKJ/kiko-now
+    url: https://imjehoon.github.io
 
 # Pagination
 paginate: 5
@@ -38,10 +38,10 @@ paginate: 5
 footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
-  email:
+  email: imjehoon@naver.com
   facebook:
   flickr:
-  github: AWEEKJ/kiko-now
+  github: imjehoon
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
@@ -53,7 +53,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2017 Kiko Now
+footer-text: © 2018 Lim Jae Hoon
 
 # Enter your  shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -66,13 +66,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://imjehoon.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl:
+baseurl: https://imjehoon.github.io
 
 #
 # !! You don't need to change any of the configuration flags below !!
