--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ url: https://imjehoon.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: /imjehoon.github.io
+baseurl: /
 
 #
 # !! You don't need to change any of the configuration flags below !!
