--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ navigation:
     url: /archive
   - name: Tags
     url: /tags
-  - name: Theme
-    url: https://imjehoon.github.io
+  - name: Category
+    url: /category
 
 # Pagination
 paginate: 5
