--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ navigation:
     url: /archive
   - name: Tags
     url: /tags
-  - name: Category
-    url: /category
+  - name: Categorys
+    url: /categorys
 
 # Pagination
 paginate: 5
